--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "repository": "https://github.com/giovannirigotti/MasterZ_Solana_Bootcamp.git",
   "author": "giovannirigotti <rigotti.giovanni@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "keygen": "ts-node ./keygen.ts"
+  },
   "dependencies": {
     "@solana/web3.js": "^1.92.3",
     "@types/node": "^20.14.2",
